--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,12 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@clinic-workspace/data-access": ["libs/data-access/src/index.ts"],
+      "@clinic-workspace/patients": ["feature/patients/src/index.ts"],
+      "@clinic-workspace/ui": ["libs/ui/src/index.ts"],
+      "@clinic-workspace/util": ["libs/util/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
