--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "@clinic-workspace/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "lint": "nx run-many -t lint",
+    "test": "nx run-many -t test",
+    "e2e": "nx run-many -t e2e",
+    "build": "nx run-many -t build"
+  },
   "private": true,
   "dependencies": {
     "@angular-devkit/build-angular": "~20.3.0",
